--- a/public/partials/navbar.hbs
+++ b/public/partials/navbar.hbs
@@ -23,7 +23,7 @@
                 {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
             </div>
         </li>
-        <li><a href="/"><i class="material-icons">home</i>Index Page</a></li>
+        <li><a href="/"><i class="material-icons">home</i>Home</a></li>
         <li><a href="/inventory"><i class="material-icons">book</i>Inventory</a></li>
         <li><a href="/projects"><i class="material-icons">import_contacts</i>Projects</a></li>
         <li><a href="/archive"><i class="material-icons">archive</i>Archive</a></li>
