--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -731,6 +731,35 @@
         }
     </script>
 
+        <script>
+        document.getElementById('sort-supplier-button').addEventListener('click', function () {
+            sortTableByTrade(2); // Sort by the first column
+        });
+
+        function sortTableByTrade(columnIndex) {
+            var table, rows, switching, i, x, y, shouldSwitch;
+            table = document.getElementById('my-table');
+            switching = true;
+            while (switching) {
+                switching = false;
+                rows = table.rows;
+                for (i = 1; i < (rows.length - 1); i++) {
+                    shouldSwitch = false;
+                    x = rows[i].getElementsByTagName('TD')[columnIndex];
+                    y = rows[i + 1].getElementsByTagName('TD')[columnIndex];
+                    if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+                if (shouldSwitch) {
+                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+                    switching = true;
+                }
+            }
+        }
+    </script>
+
     <script>
         document.getElementById('sort-amount-button').addEventListener('click', function () {
             sortTableByAmount(2); // Sort by the first column
