--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -48,9 +48,17 @@
         {{/each}}
 
 
+            <p> &nbsp;</p>
+                <a href="#open" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add Trial</a>
+                
+                <button onclick="location.href = '/projects/{{project_id}}/procedure';" id="create-pdf-button" name="create-pdf-button" class="btn waves-effect waves-luluble-pink luluble-pink">Procedure</button>
+                
+                <button onclick="window.print()" id="create-pdf-button" name="create-pdf-button" class="btn waves-effect waves-luluble-pink luluble-pink">Print Page</button>
+                <p> &nbsp;</p>
 
-             <div class="col s12 m4 l2">
-            <a href="#open" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add Trial</a>
+            <div class="col s12 m4 l2">
+
+                
 
             <div class="modal" id="open">
                 <div style="padding: 5% 5% 5% 5%">
@@ -136,14 +144,7 @@
                             <p>Total Amt of Formula: {{s}}</p>
                             <p class = "totalPercent">WARNING: Total Percentage = {{percent}}</p>
                         {{/each}} --}}
-                            
-                        <div class="col s6 m8 12">
-                        <button onclick="location.href = '/projects/{{project_id}}/procedure';" id="create-pdf-button" name="create-pdf-button" class="btn waves-effect waves-luluble-pink luluble-pink">Procedure</button>
-                        </div>
-
-                        <button onclick="window.print()" id="create-pdf-button" name="create-pdf-button" class="btn waves-effect waves-luluble-pink luluble-pink">Print Page</button>
-
-
+                        
                         {{#each ing_data}}
                             <tr>
                                 <td width = "10px" style = "padding:20px">{{phase}}</td>
