changing cells edits database successful

--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -176,7 +176,7 @@
 
             cell.addEventListener('keydown', function (e) {
                 if (e.keyCode === 13) { // Capture Enter key
-                console.log("yoohoo");
+                // console.log("yoohoo");
                 e.preventDefault(); // Prevent line break
                 cell.blur(); // Exit the cell
                 }
