--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -374,12 +374,29 @@
 
                     for (let trial = 0; trial < trial_data; trial++) {
                         console.log(trial);
-                        $("#info").append("<td colspan=2 style=\"height: 60px\"><a href= '/projects/{{project_id}}/deleteTrial/' + (trial+1)><i class='material-icons'>delete</i></a></td>");
+                        {{!-- $("#info").append("<td colspan=2><a href= '/projects/{{project_id}}/deleteTrial/" + (trial+1) + "'><i class='material-icons'>delete</i></a></td>"); --}}
+                        $("#info").append("<td colspan=2><a href= '#deleteTrial'><i class='material-icons'>delete</i></a></td>");
                     }
                     
 
                     $("#info").append("</tr>");
 
+                </script>
+
+                <div class="modal" id="deleteTrial">
+                    <div style="padding: 5% 5% 5% 5%">
+                    <p>Are you sure you want to delete this trial?</p>
+                    <a class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" href="/projects/{{project_id}}/deleteTrial/(trial+1)">YES</a>
+                    <a class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" href="/projects/{{project_id}}">NO</a>
+
+
+                    </div>
+                </div>
+
+                  <script>
+                    $(document).ready(function () {
+                        $('.modal').modal();
+                    })
                 </script>
 
                   
