--- a/views/index.hbs
+++ b/views/index.hbs
@@ -74,7 +74,7 @@
                         {{#each expired}}
                             <tr>
                                 <td>{{inci_name}} {{trade_name}}</td>
-                                <td>Expiration date: {{expiration}}</td>
+                                <td>Expiration date: {{formatDate expiration}}</td>
                             </tr>
                         {{/each}}
                         </tbody>
