--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -125,7 +125,7 @@
                                 onMouseOut="this.style.color='#000000'" class="card-title nav-link"
                                         href="/projects/{{project_id}}"><b>{{project_name}}</b>
                                 <h6 style="color: black; ">Client: {{client}}</h6>
-                                <h6 style="color: black;">{{date}}</h6>
+                                <h6 style="color: black;">{{formatDate date}}</h6>
                                 <div class="col s12">&nbsp;</div>
                                 <div class="row">
                                     <div class = "col s12 m4 l4">
@@ -161,7 +161,7 @@
 
                                                             {{!-- Field 3 --}}
                                                             <b><label for="tuluble">Date Started:</label></b>
-                                                            <input type="date" name = "userInput3" id="userInput3" value="{{this.date}}">
+                                                            <input type="date" name = "userInput3" id="userInput3" value="{{formatDate this.date}}">
                                                             <p> </p>
 
                                                             {{!-- Field 4 --}}
@@ -198,7 +198,7 @@
                         <div class="col s12"><b><font size="+2">{{project_name}}</font></b></div>
                         <div class="col s12">&nbsp;</div>
                         <div class="col s6">
-                            <span><b>Client:</b> {{client}}<br></br><b>Date: </b>10/12/2021</span>
+                            <span><b>Client:</b> {{client}}<br></br><b>Date: </b>{{formatDate date}}</span>
                         </div>
                         <div class="col s6">
                             <span><b>Contact name: </b>{{client_name}}<br></br><b>Contact email: </b>{{client_email}}</span>
